[project]
name = "atqdm"
version = "0.0.2"
authors = [
  { name="Sergey Skrebnev", email="sergey.skrebnev@gmail.com" },
]
description = "Tqdm replacement for Comet / W&B reporting"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/skrbnv/atqdm"